# foreign-instruments-rs

./: Cargo.toml  ROADMAP.md  UDEV_SETUP.md  cursor_analyze_git_history_for_reposito.md  cursor_review_project_chat_log_for_insi.md  launch_test.sh  midi_mapping.toml  setup_udev_maschine_jam.sh  test_device_detection.rs
src/: device_registry.rs  event_driven_main.rs  event_driven_main_rusb.rs  hid_devices.rs  hotplug_handler.rs  lib.rs  main.rs  main_event_driven.rs  main_event_driven_rusb.rs  maschinetest.rs  midi.rs  midi_mapping.rs  midi_output.rs  rusb_hid_manager.rs  simple_maschine_test.rs  test_detection.rs  usb_midi_mapper.rs
src/devices/native_instruments/: komplete_kontrol_s25.rs  maschine_jam.rs
src/types/: foreign_instruments_types.rs
src/types/backend_types/: backend_libusb_types.rs
