[package]
name = "foreign-instruments"
version = "0.1.0"
edition = "2021"
authors = ["styyle14"]

[dependencies]
futures = "0.3"
futures-core = "0.3"
rusb = "0.9"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
once_cell = "1.19"
rand = "0.8"
midir = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lib]
name = "foreigninstruments"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "foreigninstrumentsd"
path = "src/main.rs" 